--- a/docker/integrity-hdfs/namenode/ui/explorer.css
+++ b/docker/integrity-hdfs/namenode/ui/explorer.css
@@ -7,7 +7,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    background-color: rgba(0,0,0,0.8); /* Black background with opacity */
     z-index: 100; /* Specify a stack order in case you're using a different order for other elements */
     cursor: default; /* Add a pointer on hover */
     text-align: center;
@@ -22,7 +22,7 @@
     border-radius: 15px;
     background: whitesmoke;
     margin-top: 100px;
-    box-shadow: #555 -4px 5px 5px 2px;
+    box-shadow: rgba(0,0,0,0.5) -5px 7px 4px 1px
   }
 
   .login-input {
